2008-01-07 Fred Kiefer <FredKiefer@gmx.de>

	* Source/win32/WIN32Server.m (-receivedEvent:...forMode:): Add
	#ifdef for Cygwin.

2008-01-01  Adam Fedor  <fedor@gnu.org>

	* Version 0.13.1

2007-12-11 Isaiah Beerbower <public@ipaqah.com>

	* Source/cairo/*
	* Headers/cairo/*
	Reverting back to fontconfig font system.

2007-12-10 Isaiah Beerbower <public@ipaqah.com>

	* Source/cairo/CairoFontEnumerator.m (-enumerateFontsAndFamilies, cacheFolder,
	bundleModificationDate, cacheFont, cacheNFontBundle, mergeFontInfo):
	Rewrite to cache fonts in a plist and support nfont bundles.
	(-defaultSystemFontName, -defaultBoldSystemFontName,
	-defaultFixedPitchFontName):
	Added actual PostScript name for Bitstream Vera fonts.
	* Source/cairo/CairoFaceInfo.m (-fontFace,
	-initWithfamilyName:fullName:weight:italicAngle:traits:files:index:,
	-setFullName:, -fullName, -setItalicAngle:, -italicAngle, -setIndex:, -index):
	Update to reflect changes in CairoFontEnumerator.
	* Headers/cairo/CairoFaceInfo.m: Same.
	* Source/cairo/CairoFontInfo.m (-setupAttributes): Take italicAngle & fullName
	from CairoFaceInfo.

2007-12-10 Fred Kiefer <FredKiefer@gmx.de>

	* Source/xlib/GSXftFontInfo.m:
	Explicitly include NSDictionary.h header for better MacOS-X
	compatibility.
	* Headers/gsc/GSGState.h: Change fillColorS and strokeColorS to
	NSColorSpace. 
	* Source/gsc/GSGState.m (NSColor-colorWithValues:colorSpaceName:):
	Removed.  
	* Source/gsc/GSGState.m (-GSSetFillColorspace:,
	-GSSetStrokeColorspace:, -GSSetFillColor:, -GSSetStrokeColor:): 
	Changed to use NSColorSpace. 

2007-12-03 Riccardo Mottola <riccardo@kaffe.org>

        * Source/winlib/WIN32GState.m: Implement Greyscale image handling

2007-11-29 Richard Frith-Macdonald <rfm@gnu.org>

        * Source/art/ReadRect.m:
        * Source/art/ARTContext.m:
        * Source/art/shfill.m:
	Explicitly include NSDictionary.h header for better MacOS-X
	compatibility.

2007-11-29 Richard Frith-Macdonald <rfm@gnu.org>
